--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Set Push options
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: echo ::set-env name=BUILD_ARGS::--pull --push --image-repository mocaccinoos/extra-amd64-cache --skip-if-metadata-exists=true
+      run: echo ::set-env name=BUILD_ARGS::--pull --push --skip-if-metadata-exists=true
 
     - name: Install minio and login
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
