--- a/multi-arch/packages/minio-client/build.yaml
+++ b/multi-arch/packages/minio-client/build.yaml
@@ -1,8 +1,15 @@
-image: "quay.io/mocaccino/extra"
+requires:
+- category: "development"
+  name: "toolchain"
+  version: ">=0"
 prelude:
 - luet install utils/curl && luet cleanup
-- curl -L https://dl.min.io/client/mc/release/linux-${MUSL_ARCH}/mc --output /usr/bin/mc
 package_dir: /minio-client
 steps:
+- |
+  MC_ARCH=${MUSL_ARCH} && \
+  MC_ARCH="${MC_ARCH/x86/amd64}" && \
+  RES=$(curl --no-progress-meter -L https://dl.min.io/client/mc/release/linux-${MC_ARCH}/mc --output /usr/bin/mc -w '%{http_code}') && \
+  eval 'if [[ $RES != "200" ]]; then exit 1 ; fi'
 - chmod a+x /usr/bin/mc && mkdir /${PACKAGE_NAME}/usr/bin -p
 - mv /usr/bin/mc /${PACKAGE_NAME}/usr/bin/mc
