--- a/multi-arch/packages/minio-client/definition.yaml
+++ b/multi-arch/packages/minio-client/definition.yaml
@@ -1,6 +1,6 @@
 category: "net-fs"
 name: "minio-client"
-version: "20200908+2"
+version: "20201003"
 labels:
   github.repo: "minio"
   github.owner: "minio"
