app-emulation/lxd-compose: Bump v.0.0.1_pre20201013

--- a/multi-arch/packages/lxd-compose/definition.yaml
+++ b/multi-arch/packages/lxd-compose/definition.yaml
@@ -1,6 +1,6 @@
 category: "app-emulation"
 name: "lxd-compose"
-version: "0.0.1_pre20201005+1"
+version: "0.0.1_pre20201013"
 labels:
   github.repo: "MottainaiCI"
   github.owner: "lxd-compose"
