--- a/multi-arch/packages/mottainai-cli/build.yaml
+++ b/multi-arch/packages/mottainai-cli/build.yaml
@@ -2,12 +2,12 @@ image: "quay.io/mocaccino/extra"
 prelude:
 - luet install development/make lang/go vcs/git
 - mkdir go/src/github.com/${GITHUB_ORG}/ -p
-- cd go/src/github.com/${GITHUB_ORG}/ && git clone https://github.com/${GITHUB_ORG}/${PACKAGE_NAME}.git
+- cd go/src/github.com/${GITHUB_ORG}/ && git clone https://github.com/${GITHUB_ORG}/{{ .Values.name }}.git
 env:
 - GOPATH=/luetbuild/go/
-- GITHUB_ORG=MottainaiCI
-- GIT_HASH=97be4108f8778e28c00371bdb6a635e62d94048a
+- GITHUB_ORG={{ ( index .Values.labels "github.repo" ) }}
+- GIT_HASH={{ ( index .Values.labels "git.hash" ) }}
 steps:
-- cd go/src/github.com/${GITHUB_ORG}/${PACKAGE_NAME} && git checkout "${GIT_HASH}" && make build && mv ${PACKAGE_NAME} /usr/bin/${PACKAGE_NAME}
+- cd go/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/ && git checkout "${GIT_HASH}" && make build && mv {{ .Values.name }} /usr/bin/{{ .Values.name }}
 includes:
 - /usr/bin/mottainai-cli
