--- a/multi-arch/packages/mottainai-cli/definition.yaml
+++ b/multi-arch/packages/mottainai-cli/definition.yaml
@@ -1,7 +1,8 @@
 category: "dev-util"
 name: "mottainai-cli"
-version: "0.0.1_pre20200828+1"
+version: "0.0.1_pre20201021"
 labels:
   github.repo: "MottainaiCI"
   github.owner: "mottainai-cli"
-
+  autobump.prefix: "0.0.1_pre"
+  git.hash: "c4f2344d955a5104181e6784ce112c0f28a904c9"
