--- a/multi-arch/packages/hub/build.yaml
+++ b/multi-arch/packages/hub/build.yaml
@@ -5,7 +5,7 @@ prelude:
 - cd go/src/github.com/${GITHUB_ORG}/ && git clone https://github.com/${GITHUB_ORG}/{{ .Values.name }}.git
 env:
 - GOPATH=/luetbuild/go/
-- GITHUB_ORG={{ ( index .Values.labels "github.repo" ) }}
+- GITHUB_ORG={{ ( index .Values.labels "github.owner" ) }}
 - GIT_HASH={{ ( index .Values.labels "git.hash" ) }}
 - CGO_ENABLED=0
 steps:
