--- a/multi-arch/packages/hub/build.yaml
+++ b/multi-arch/packages/hub/build.yaml
@@ -1,6 +1,6 @@
 image: "quay.io/mocaccino/extra"
 prelude:
-- luet install development/make lang/go vcs/git shells/bash
+- luet install development/make lang/go vcs/git
 - mkdir go/src/github.com/${GITHUB_ORG}/ -p
 - cd go/src/github.com/${GITHUB_ORG}/ && git clone https://github.com/${GITHUB_ORG}/{{ .Values.name }}.git
 env:
@@ -9,6 +9,8 @@ env:
 - GIT_HASH={{ ( index .Values.labels "git.hash" ) }}
 - CGO_ENABLED=0
 steps:
+- luet install shells/bash
 - cd go/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/  && git checkout v"${PACKAGE_VERSION}" -b build && ./script/build -o bin/hub && mv bin/{{ .Values.name }} /usr/bin/{{ .Values.name }}
+- chmod +x  /usr/bin/{{ .Values.name }}
 includes:
 - /usr/bin/hub
