Set clean to true when running GHA

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -77,7 +77,7 @@ jobs:
 
     - name: Build packages 🔧
       env:
-        CLEAN: "false"
+        CLEAN: "true"
         TARGET: "target"
         SUDO: "sudo -E"
       run: |
