--- a/multi-arch/packages/openssh/definition.yaml
+++ b/multi-arch/packages/openssh/definition.yaml
@@ -1,7 +1,10 @@
 name: openssh
 category: utils
 version: "8.3+2"
-
+requires:
+- name: libressl
+  category: "libs"
+  version: ">=0"
 uri:
 - https://www.openssh.com
 license: "BSD GPL-2"
