--- a/multi-arch/packages/pkgs-checker/definition.yaml
+++ b/multi-arch/packages/pkgs-checker/definition.yaml
@@ -1,6 +1,7 @@
 category: "dev-util"
 name: "pkgs-checker"
-version: "0.8.0"
+version: "0.8.0+1"
 labels:
   github.repo: "Sabayon"
   github.owner: "pkgs-checker"
+  original.package.version: "0.8.0"
