--- a/multi-arch/packages/pkgs-checker/minimal/definition.yaml
+++ b/multi-arch/packages/pkgs-checker/minimal/definition.yaml
@@ -1,11 +1,12 @@
 category: "dev-util"
-name: "pkgs-checker"
-version: "0.8.0+3"
+name: "pkgs-checker-minimal"
+description: "pkgs-checker version (without CGO stuff)"
+version: "0.8.0"
 labels:
   github.repo: "Sabayon"
   github.owner: "pkgs-checker"
   original.package.version: "0.8.0"
 conflicts:
-- name: "pkgs-checker-minimal"
+- name: "pkgs-checker"
   category: "dev-util"
   version: ">=0"
