--- a/multi-arch/packages/mocaccino-wallpaper/build.yaml
+++ b/multi-arch/packages/mocaccino-wallpaper/build.yaml
@@ -3,4 +3,4 @@ image: "quay.io/mocaccino/extra"
 package_dir: /mocaccino-wallpaper
 
 steps:
-- mkdir /mocaccino-wallpaper/usr/share/wallpapers/mocaccino-wallpaper -p && cp mocaccino.png /mocaccino-wallpaper/usr/share/wallpapers/mocaccino-wallpaper
+- mkdir /mocaccino-wallpaper/usr/share/wallpapers/mocaccino-wallpaper -p && cp Mocaccino.png /mocaccino-wallpaper/usr/share/wallpapers/mocaccino-wallpaper
