--- a/multi-arch/packages/libmnl/build.yaml
+++ b/multi-arch/packages/libmnl/build.yaml
@@ -2,9 +2,7 @@ requires:
 - category: "development"
   name: "toolchain"
   version: ">=0"
-- name: "libmnl"
-  category: "libs"
-  version: ">=0"
+
 
 env:
 - CFLAGS="-D_GNU_SOURCE -I/include -I/usr/include -static"
@@ -16,11 +14,9 @@ prelude:
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    luet install utils/autoconf development/make development/automake vcs/git development/m4 libs/libressl && \
    mkdir -p /${PACKAGE_NAME} && mkdir ${PACKAGE_NAME} && \
-   wget https://www.netfilter.org/projects/iptables/files/iptables-${PACKAGE_VERSION}.tar.bz2 -O iptables.tar.bz2 && tar -xvf iptables.tar.bz2 -C ./ && mv iptables-$PACKAGE_VERSION ${PACKAGE_NAME}
+   wget https://www.netfilter.org/pub/${PACKAGE_NAME}/${PACKAGE_NAME}-${PACKAGE_VERSION}.tar.bz2 -O ${PACKAGE_NAME}.tar.bz2 && tar -xvf ${PACKAGE_NAME}.tar.bz2 -C ./ && mv ${PACKAGE_NAME}-$PACKAGE_VERSION ${PACKAGE_NAME}
 steps:
-- cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION && ./configure
+- cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION  && ./configure --prefix=/usr --enable-static
 - cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION && make -j8
 - cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION && make DESTDIR=/${PACKAGE_NAME} install
-- cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION && \
-  install -m644 include/iptables.h include/ip6tables.h "/${PACKAGE_NAME}"/usr/include/ && \
-  install include/libiptc/*.h "${PACKAGE_NAME}"/usr/include/libiptc/
+- cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION && make install
