--- a/multi-arch/packages/libmnl/definition.yaml
+++ b/multi-arch/packages/libmnl/definition.yaml
@@ -1,6 +1,6 @@
-name: libnml
+name: libmnl
 category: libs
-version: "1.8.5"
+version: "1.0.4"
 
 uri:
 - https://www.netfilter.org/projects/libmnl/index.html
