--- a/multi-arch/packages/iptables/build.yaml
+++ b/multi-arch/packages/iptables/build.yaml
@@ -18,9 +18,9 @@ prelude:
    mkdir -p /${PACKAGE_NAME} && mkdir ${PACKAGE_NAME} && \
    wget https://www.netfilter.org/projects/iptables/files/iptables-${PACKAGE_VERSION}.tar.bz2 -O iptables.tar.bz2 && tar -xvf iptables.tar.bz2 -C ./ && mv iptables-$PACKAGE_VERSION ${PACKAGE_NAME}
 steps:
-- cd ${PACKAGE_NAME} && ./configure
-- cd ${PACKAGE_NAME} && make -j8
-- cd ${PACKAGE_NAME} && make DESTDIR=/${PACKAGE_NAME} install
-- cd ${PACKAGE_NAME} && \
+- cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION && ./configure
+- cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION && make -j8
+- cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION && make DESTDIR=/${PACKAGE_NAME} install
+- cd ${PACKAGE_NAME}/${PACKAGE_NAME}-$PACKAGE_VERSION && \
   install -m644 include/iptables.h include/ip6tables.h "/${PACKAGE_NAME}"/usr/include/ && \
   install include/libiptc/*.h "${PACKAGE_NAME}"/usr/include/libiptc/
