--- a/multi-arch/packages/libnftnl/build.yaml
+++ b/multi-arch/packages/libnftnl/build.yaml
@@ -2,7 +2,9 @@ requires:
 - category: "development"
   name: "toolchain"
   version: ">=0"
-
+- name: "libmnl"
+  category: "libs"
+  version: ">=0"
 
 env:
 - CFLAGS="-D_GNU_SOURCE -I/include -I/usr/include -static"
