--- a/multi-arch/packages/mocaccino-skel/build.yaml
+++ b/multi-arch/packages/mocaccino-skel/build.yaml
@@ -1,7 +1,4 @@
-requires:
-- category: "libs"
-  name: "skalibs"
-  version: ">=0"
+image: "quay.io/mocaccino/extra:latest"
 
 package_dir: /mocaccino-skel
 prelude:
