--- a/multi-arch/packages/lxd-compose/definition.yaml
+++ b/multi-arch/packages/lxd-compose/definition.yaml
@@ -1,6 +1,6 @@
 category: "app-emulation"
 name: "lxd-compose"
-version: "0.2.1_pre20201112"
+version: "0.2.1_pre20201112+1"
 labels:
   github.repo: "MottainaiCI"
   github.owner: "lxd-compose"
