--- a/multi-arch/packages/k3s/build.yaml
+++ b/multi-arch/packages/k3s/build.yaml
@@ -6,7 +6,7 @@ requires:
 package_dir: /k3s
 
 prelude:
-- luet install libs/libressl utils/ca-certificates utils/curl libs/zlib
+- luet install -y libs/libressl utils/ca-certificates utils/curl libs/zlib
 env:
 - BINARY=k3s
 steps:
