--- a/multi-arch/packages/k9s/build.yaml
+++ b/multi-arch/packages/k9s/build.yaml
@@ -1,6 +1,6 @@
 image: "quay.io/mocaccino/extra"
 prelude:
-- luet install development/make lang/go vcs/git
+- luet install -y development/make lang/go vcs/git
 - mkdir go/src/github.com/${GITHUB_ORG}/ -p
 - cd go/src/github.com/${GITHUB_ORG}/ && git clone https://github.com/${GITHUB_ORG}/{{ .Values.name }}.git
 env:
@@ -9,7 +9,7 @@ env:
 - GIT_HASH={{ ( index .Values.labels "git.hash" ) }}
 - CGO_ENABLED=0
 steps:
-- luet install shells/bash
+- luet install -y shells/bash
 - cd go/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/  && git checkout v"${PACKAGE_VERSION}" -b build && make build && mv execs/{{ .Values.name }} /usr/bin/{{ .Values.name }}
 - chmod +x  /usr/bin/{{ .Values.name }}
 includes:
