--- a/multi-arch/packages/lxd-compose/build.yaml
+++ b/multi-arch/packages/lxd-compose/build.yaml
@@ -1,9 +1,9 @@
 image: "quay.io/mocaccino/extra"
 prelude:
-- luet install development/make lang/go vcs/git
+- luet install -y development/make lang/go vcs/git
 - git clone https://github.com/MottainaiCI/lxd-compose.git
 env:
-- GIT_HASH=107a631c6d27096fa1c4f201ca882adc1b252e6a
+- GIT_HASH=09a1bc78ef42bb19669a03f73ce746238afa1ece
 steps:
 - cd lxd-compose && git checkout "${GIT_HASH}" && make build && mv lxd-compose /usr/bin/lxd-compose
 includes:
