Setup root account with entities and ship os-release as part of the package

--- a/multi-arch/packages/mocaccino-skel/build.yaml
+++ b/multi-arch/packages/mocaccino-skel/build.yaml
@@ -7,6 +7,8 @@ prelude:
 steps:
 - cp -rfv mocaccino-init-skel.sh /${PACKAGE_NAME}/usr/sbin/mocaccino-init-skel
 - chmod +x /${PACKAGE_NAME}/usr/sbin/mocaccino-init-skel
-- mkdir -p /${PACKAGE_NAME}/etc/skel/
+- mkdir -p /${PACKAGE_NAME}/etc/skel/entities
+- cp -rfv entities/* /${PACKAGE_NAME}/etc/skel/entities
 - cp -rfv rootfs/* /${PACKAGE_NAME}/etc/skel/
+- cp -rfv os-release /${PACKAGE_NAME}/etc
 - mkdir /${PACKAGE_NAME}/mnt && touch /${PACKAGE_NAME}/mnt/.keep
