dev-util/mottainai-server: Bump v.0.0.1_pre20201202+1

--- a/multi-arch/packages/mottainai-server/build.yaml
+++ b/multi-arch/packages/mottainai-server/build.yaml
@@ -19,6 +19,7 @@ env:
 - LIB_DIR=/var/lib/mottainai
 - SRV_DIR=/srv/mottainai
 - GITHUB_ORG=MottainaiCI
+- LUET_YES=true
 package_dir: /{{ .Values.name }}
 steps:
 - go env
