dev-util/mottainai-server: Bump v.0.0.1_pre20201202+2

--- a/multi-arch/packages/mottainai-server/build.yaml
+++ b/multi-arch/packages/mottainai-server/build.yaml
@@ -35,8 +35,12 @@ steps:
   cd ${GOPATH}/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/ && \
   mv {{ .Values.name }} /{{ .Values.name }}/usr/bin/{{ .Values.name }} && \
   cp contrib/config/mottainai-server.yaml.example /{{ .Values.name }}/etc/mottainai/mottainai-server.yaml && \
-- cp -Rv templates /{{ .Values.name }}${LIB_DIR}/
-- cp -Rv public /{{ .Values.name }}${LIB_DIR}
+- |
+  cd ${GOPATH}/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/ && \
+  cp -Rv templates /{{ .Values.name }}${LIB_DIR}/
+- |
+  cd ${GOPATH}/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/ && \
+  cp -Rv public /{{ .Values.name }}${LIB_DIR}
 - chown -R mottainai-server:mottainai /{{ .Values.name }}${LIB_DIR}
 - chmod -R 770 /{{ .Values.name }}${LIB_DIR}
 - chmod -R 774 /{{ .Values.name }}${LIB_DIR}/public
