dev-util/mottainai-server: Bump v.0.0.1_pre20201206

--- a/multi-arch/packages/mottainai-server/definition.yaml
+++ b/multi-arch/packages/mottainai-server/definition.yaml
@@ -1,6 +1,6 @@
 category: "dev-util"
 name: "mottainai-server"
-version: "0.0.1_pre20201202+3"
+version: "0.0.1_pre20201206"
 requires:
 - category: "users"
   name: "mottainai-server"
