Add portage, funtoo and aports release packages

--- a/multi-arch/packages/mocaccino-release/collection.yaml
+++ b/multi-arch/packages/mocaccino-release/collection.yaml
@@ -2,3 +2,12 @@ packages:
 - category: "mocaccino-release"
   name: "micro"
   version: "0"
+- category: "mocaccino-release"
+  name: "portage"
+  version: "0"
+- category: "mocaccino-release"
+  name: "funtoo"
+  version: "0"
+- category: "mocaccino-release"
+  name: "aports"
+  version: "0"
