--- a/multi-arch/packages/yq4/definition.yaml
+++ b/multi-arch/packages/yq4/definition.yaml
@@ -1,6 +1,10 @@
-name: yq
+name: yq4
 category: utils
-version: "3.4.1"
+version: "4.0.0"
+labels:
+  github.repo: "yq"
+  github.owner: "mikefarah"
+  autobump.strategy: "release"
 uri:
   - https://yq.readthedocs.io
   - https://github.com/kislyuk/yq
