--- a/multi-arch/packages/lxd-compose/build.yaml
+++ b/multi-arch/packages/lxd-compose/build.yaml
@@ -3,7 +3,7 @@ prelude:
 - luet install -y development/make lang/go vcs/git
 - git clone https://github.com/MottainaiCI/lxd-compose.git
 env:
-- GIT_HASH=v{{ .version }}
+- GIT_HASH=v{{ .Values.version }}
 steps:
 - cd lxd-compose && git checkout "${GIT_HASH}" && make build && mv lxd-compose /usr/bin/lxd-compose
 includes:
