app-emulation/lxd-compose: Bump v.0.5.0+2

--- a/multi-arch/packages/lxd-compose/build.yaml
+++ b/multi-arch/packages/lxd-compose/build.yaml
@@ -5,6 +5,6 @@ prelude:
 env:
 - GIT_HASH=v{{ .Values.version }}
 steps:
-- cd lxd-compose && git checkout "${GIT_HASH}" && make build && mv lxd-compose /usr/bin/lxd-compose
+- cd lxd-compose && git checkout "${GIT_HASH%\+*}" && make build && mv lxd-compose /usr/bin/lxd-compose
 includes:
 - /usr/bin/lxd-compose
