--- a/multi-arch/packages/mottainai-agent/definition.yaml
+++ b/multi-arch/packages/mottainai-agent/definition.yaml
@@ -1,6 +1,6 @@
 category: "dev-util"
 name: "mottainai-agent"
-version: "0.0.1_pre20200828+3"
+version: "0.0.1_pre20210122"
 requires:
 - category: "users"
   name: "mottainai-agent"
