--- a/multi-arch/packages/mottainai-server/definition.yaml
+++ b/multi-arch/packages/mottainai-server/definition.yaml
@@ -1,6 +1,6 @@
 category: "dev-util"
 name: "mottainai-server"
-version: "0.0.1_pre20210122+1"
+version: "0.0.1_pre20210226"
 requires:
 - category: "users"
   name: "mottainai-server"
