--- a/multi-arch/packages/whalebrew/definition.yaml
+++ b/multi-arch/packages/whalebrew/definition.yaml
@@ -1,8 +1,8 @@
 category: "utils"
 name: "whalebrew"
-version: "0.3.0"
+version: "0.3.0+1"
 license: "Apache License 2.0"
-description: " Homebrew, but with Docker images"
+description: "Homebrew, but with Docker images"
 labels:
   github.repo: "whalebrew"
   github.owner: "whalebrew"
