--- a/multi-arch/packages/database-release-manager/finalize.yaml
+++ b/multi-arch/packages/database-release-manager/finalize.yaml
@@ -1,2 +1,3 @@
 install:
-- echo "Install database client tools to use correctly database-release-manager: mongo, sqliplus, mysql, etc.."
+- |
+  echo "Install database client tools to use correctly database-release-manager: mongo, sqliplus, mysql, etc.."
