--- a/multi-arch/packages/database-release-manager/definition.yaml
+++ b/multi-arch/packages/database-release-manager/definition.yaml
@@ -1,6 +1,6 @@
 category: "database"
 name: "database-release-manager"
-version: "0.2.0"
+version: "0.2.0+1"
 license: "GPL-2.0"
 description: "Software for manage database scripts and managing easy installations/developments"
 uri:
