dev-util/pkgs-checker: Bump v.0.8.1+1 (Add LUET_YES)

--- a/multi-arch/packages/pkgs-checker/build.yaml
+++ b/multi-arch/packages/pkgs-checker/build.yaml
@@ -8,6 +8,7 @@ prelude:
 - cd /go/src/github.com/{{ ( index .Values.labels "github.repo" ) }} && git clone https://github.com/{{ ( index .Values.labels  "github.repo" ) }}/{{.Values.name}}
 env:
 - GOPATH=/go
+- LUET_YES=true
 steps:
 - |
   cd /go/src/github.com/{{ ( index .Values.labels "github.repo" ) }}/{{.Values.name}} && \
