--- a/multi-arch/packages/pkgs-checker/definition.yaml
+++ b/multi-arch/packages/pkgs-checker/definition.yaml
@@ -1,6 +1,6 @@
 category: "dev-util"
 name: "pkgs-checker"
-version: "0.8.1"
+version: "0.8.1+1"
 labels:
   github.repo: "Sabayon"
   github.owner: "pkgs-checker"
