dev-util/pkgs-checker-minimal: Bump v.0.8.1+1 (Add LUET_YES)

--- a/multi-arch/packages/pkgs-checker/minimal/build.yaml
+++ b/multi-arch/packages/pkgs-checker/minimal/build.yaml
@@ -5,6 +5,7 @@ prelude:
 - cd /go/src/github.com/{{ ( index .Values.labels "github.repo" ) }} && git clone https://github.com/{{ ( index .Values.labels  "github.repo" ) }}/{{ ( index .Values.labels "original.package.name" ) }}
 env:
 - GOPATH=/go
+- LUET_YES=true
 - PKGNAME={{ ( index .Values.labels "original.package.name" ) }}
 steps:
 - |
