--- a/multi-arch/packages/users/mottainai-agent/finalize.yaml
+++ b/multi-arch/packages/users/mottainai-agent/finalize.yaml
@@ -1,2 +1,3 @@
 install:
-- entities create -f /etc/passwd /etc/entities/mottainai_agent_entity_add.yaml || true
+- entities apply -f /etc/passwd /etc/entities/mottainai_agent_entity_add.yaml || true
+- entities apply -f /etc/shadow /etc/entities/mottainai_agent_shadow_entity_add.yaml || true
