--- a/multi-arch/packages/users/mottainai-server/finalize.yaml
+++ b/multi-arch/packages/users/mottainai-server/finalize.yaml
@@ -1,2 +1,4 @@
 install:
 - entities apply -f /etc/passwd /etc/entities/mottainai_server_entity_add.yaml || true
+- entities apply -f /etc/shadow /etc/entities/mottainai_server_shadow_entity_add.yaml || true
+
