--- a/amd64/packages/k0s/definition.yaml
+++ b/amd64/packages/k0s/definition.yaml
@@ -1,6 +1,6 @@
 name: k0s
 category: container
-version: "1.21.0+k0s.0"
+version: "0.13.1"
 labels:
   github.repo: "k0s"
   github.owner: "k0sproject"
