--- a/multi-arch/packages/dasel/build.yaml
+++ b/multi-arch/packages/dasel/build.yaml
@@ -8,9 +8,12 @@ env:
 - GITHUB_ORG={{ ( index .Values.labels "github.owner" ) }}
 - GIT_HASH={{ ( index .Values.labels "git.hash" ) }}
 - CGO_ENABLED=0
+#- GOARCH=arm
 steps:
 - luet install -y shells/bash
-- cd go/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/  && git checkout v"${PACKAGE_VERSION}" -b build && go build -o dasel && mv {{ .Values.name }} /usr/bin/{{ .Values.name }}
+- | 
+  PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
+  cd go/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/  && git checkout v"${PACKAGE_VERSION}" -b build && go build -o dasel ./cmd/dasel && mv {{ .Values.name }} /usr/bin/{{ .Values.name }}
 - chmod +x  /usr/bin/{{ .Values.name }}
 includes:
 - /usr/bin/{{.Values.name}}
