--- a/multi-arch/packages/mottainai-agent/definition.yaml
+++ b/multi-arch/packages/mottainai-agent/definition.yaml
@@ -1,6 +1,6 @@
 category: "dev-util"
 name: "mottainai-agent"
-version: "0.1.0_pre20210521+1"
+version: "0.1.0_pre20210524"
 requires:
 - category: "users"
   name: "mottainai-agent"
