dev-util/mottainai-scheduler: Bump v.0.1.0_pre20210524+1

--- a/multi-arch/packages/mottainai-scheduler/build.yaml
+++ b/multi-arch/packages/mottainai-scheduler/build.yaml
@@ -5,7 +5,7 @@ requires:
 
 env:
 - GOPATH=/luetbuild/go/
-package_dir: /mottainai-agent
+package_dir: /mottainai-scheduler
 steps:
 # TODO: fix this with DESTDIR install on Makefile
 - mkdir /${PACKAGE_NAME}
