--- a/multi-arch/packages/users/mottainai-server/definition.yaml
+++ b/multi-arch/packages/users/mottainai-server/definition.yaml
@@ -1,10 +1,10 @@
 category: "users"
 name: "mottainai-server"
-version: "1"
+version: "2"
 requires:
+- category: "groups"
+  name: "mottainai"
+  version: ">=0"
 - category: "system"
   name: "entities"
-  version: ">=0.1"
-- category: "init"
-  name: "mocaccino-skel"
   version: ">=0.1"
