--- a/multi-arch/packages/yip/build.yaml
+++ b/multi-arch/packages/yip/build.yaml
@@ -4,7 +4,9 @@ prelude:
 - apt-get install git
 - git clone https://github.com/mudler/${PACKAGE_NAME} ${PACKAGE_NAME}
 steps:
-- cd ${PACKAGE_NAME} && git checkout "${PACKAGE_VERSION}" && make build && mv yip /usr/bin/yip
+- | 
+   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
+   cd ${PACKAGE_NAME} && git checkout "${PACKAGE_VERSION}" && make build && mv yip /usr/bin/yip
 - chmod +x /usr/bin/yip
 includes:
 - /usr/bin/yip
