dev-util/mottainai-server: Add mottainai-importer and mottainai-exporter

--- a/multi-arch/packages/mottainai-server/build.yaml
+++ b/multi-arch/packages/mottainai-server/build.yaml
@@ -27,6 +27,8 @@ steps:
 - |
   cd ${GOPATH}/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/ && \
   mv {{ .Values.name }} /{{ .Values.name }}/usr/bin/{{ .Values.name }} && \
+  mv mottainai-exporter/mottainai-exporter /{{ .Values.name }}/usr/bin/mottainai-exporter && \
+  mv mottainai-importer/mottainai-importer /{{ .Values.name }}/usr/bin/mottainai-importer && \
   cp contrib/config/mottainai-server.yaml.example /{{ .Values.name }}/etc/mottainai/mottainai-server.yaml && \
   cp -Rv templates /{{ .Values.name }}${LIB_DIR}/ && \
   cp -Rv public /{{ .Values.name }}${LIB_DIR} && \
