groups/mottainai: Bump v.1 (add gshadow)

--- a/multi-arch/packages/groups/mottainai/finalize.yaml
+++ b/multi-arch/packages/groups/mottainai/finalize.yaml
@@ -1,2 +1,3 @@
 install:
-- entities create -f /etc/group /etc/entities/mottainai-group_entity.yaml || true
+- entities apply -f /etc/group /etc/entities/mottainai-group_entity.yaml || true
+- entities apply -f /etc/gshadow /etc/entities/mottainai_gshadow_entity.yaml || true
