--- a/multi-arch/packages/groups/mottainai/finalize.yaml
+++ b/multi-arch/packages/groups/mottainai/finalize.yaml
@@ -1,3 +1,3 @@
 install:
-- entities apply -f /etc/group /etc/entities/mottainai-group_entity.yaml || true
-- entities apply -f /etc/gshadow /etc/entities/mottainai_gshadow_entity.yaml || true
+- entities apply --safe=true -f /etc/group /etc/entities/mottainai-group_entity.yaml || true
+- entities apply --safe=true -f /etc/gshadow /etc/entities/mottainai_gshadow_entity.yaml || true
