users/mottainai-agent: Using dynamic uid/gid

--- a/multi-arch/packages/users/mottainai-agent/mottainai_agent_entity_add.yaml
+++ b/multi-arch/packages/users/mottainai-agent/mottainai_agent_entity_add.yaml
@@ -1,8 +1,8 @@
 kind: "user"
 username: "mottainai-agent"
 password: "x"
-uid: 500
-gid: 500
+uid: -1
+group: "mottainai"
 info: "Created by entities"
 homedir: "/srv/mottainai"
 shell: "/sbin/nologin"
