--- a/multi-arch/packages/users/mottainai-server/mottainai_server_entity_add.yaml
+++ b/multi-arch/packages/users/mottainai-server/mottainai_server_entity_add.yaml
@@ -1,8 +1,8 @@
 kind: "user"
 username: "mottainai-server"
 password: "x"
-uid: 501
-gid: 500
+uid: -1
+group: "mottainai"
 info: "Created by entities"
 homedir: "/srv/mottainai"
 shell: "/sbin/nologin"
