www-apps/mottainai-dashboard: Fix typo

--- a/multi-arch/packages/mottainai-dashboard/build.yaml
+++ b/multi-arch/packages/mottainai-dashboard/build.yaml
@@ -25,7 +25,7 @@ steps:
   mkdir /{{ .Values.name }}/usr/lib64/node_modules/{{ .Values.name }}/bin &&
   mkdir -p /{{ .Values.name }}/lib/systemd/system &&
   cp -rvf /build/build/* /{{ .Values.name }}/var/lib/mottainai-dashboard/ &&
-  cp -rf node_modules/* /{{ .Values.name }}/node_modules/ &&
+  cp -rvf node_modules/* /{{ .Values.name }}/usr/lib64/node_modules/{{ .Values.name }}/node_modules/ &&
   cp contrib/mottainai-dashboard.sh /{{ .Values.name }}/usr/bin/mottainai-dashboard &&
   chmod a+x /{{ .Values.name }}/usr/bin/mottainai-dashboard &&
   cp -v contrib/systemd/mottainai-dashboard.service /{{ .Values.name }}/lib/systemd/system/ &&
