--- a/multi-arch/packages/users/mottainai-server/mottainai_server_shadow_entity_add.yaml
+++ b/multi-arch/packages/users/mottainai-server/mottainai_server_shadow_entity_add.yaml
@@ -1,4 +1,7 @@
 kind: "shadow"
 username: "mottainai-server"
-password: "!"
+password: "*"
 last_changed: "now"
+minimum_changed: 0
+maximum_changed: 99999
+warn: 7
