--- a/multi-arch/packages/mottainai-dashboard/definition.yaml
+++ b/multi-arch/packages/mottainai-dashboard/definition.yaml
@@ -1,6 +1,6 @@
 category: "www-apps"
 name: "mottainai-dashboard"
-version: "0.1.0_pre20210619"
+version: "0.1.0_pre20210619+1"
 requires:
 - category: "groups"
   name: "mottainai"
